--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 
 <header class="navbar navbar-expand-lg bg-white shadow-sm">
   <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="logo-site.png" alt="mysimtravel" height="40">
-    </a>
+      <img src="logo-lp.png" alt="mysimtravel" height="40" class="img-logo">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -104,7 +102,7 @@
                 Saiba mais sobre os planos e destinos disponíveis.
               </p>
             </div>
-            <a href="#faq" class="btn mt-3 w-100" id="container-chip20">Conhecer</a>
+            <a href="https://mystore.mysimtravel.com/chipgratis" class="btn mt-3 w-100" id="container-chip20">Conhecer</a>
           </div>
         </div>
       </div>
@@ -203,7 +201,7 @@
         <h4>Chip internacional <span>mysimtravel grátis</span></h4>
         <ul>
           <li><strong>Clientes elegíveis:</strong> Clientes Tokio Marine que contrataram o Seguro Viagem Internacional com pagamento à vista nos Planos EUROPA ou MUNDO.</li>
-          <li><strong>Beneficio:</strong> Chip Gratis</li>
+          <li><strong>Beneficio:</strong> Chip Grátis</li>
           <li><strong>Como resgatar:</strong> Pela Webstore Oficial informando o número da apólice paga.</li>
           <li><strong>Plano de dados:</strong>1GB até 14 dias ou consumo total, o que ocorrer primeiro.</li>
           <li><strong>Cobertura:</strong> EUA e países da EUROPA.</li>
@@ -212,7 +210,7 @@
           <li><strong>Chip físico:</strong> Opcional, com taxa de envio.</li>
           <li><strong>Mais informações:</strong> Consulte nosso FAQ.</li>
         </ul>
-        <a href="https://mystore.mysimtravel.com/chiptokio" class="btn" target="_blank">Resgatar meu chip grátis</a>
+        <a href="https://mystore.mysimtravel.com/chipgratis" class="btn" target="_blank">Resgatar meu chip grátis</a>
       </div>
 
     </div>
