--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4T8V3Y48JG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4T8V3Y48JG');
+</script>
 </head>
 <body>
 
