--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 Saiba mais sobre os planos e destinos disponíveis.
               </p>
             </div>
-            <a href="https://mystore.mysimtravel.com/chipgratis" class="btn mt-3 w-100" id="container-chip20">Conhecer</a>
+            <a href="#faqGratis" class="btn mt-3 w-100" id="container-chip20">Conhecer</a>
           </div>
         </div>
       </div>
@@ -338,7 +338,7 @@
       </h2>
       <div id="geral8" class="accordion-collapse collapse">
         <div class="accordion-body">
-          Sim. Cada cliente pode adquirir chips adicionais com o mesmo benefício. <strong>(inserir link de compra)</strong>
+          Sim. Cada cliente pode adquirir chips adicionais com o mesmo benefício. <strong>https://mystore.mysimtravel.com/tokiomarineviagem</strong>
         </div>
       </div>
     </div>
